le footer avec les liens qui mènent au site et le z-index

--- a/Projet_Final/Projet_Final/page3.html
+++ b/Projet_Final/Projet_Final/page3.html
@@ -19,7 +19,7 @@
     </head>
     <body id="page-top">
 
-        <nav>
+        <nav class="wow">
   <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
     <div class="container">
         <a class="navbar-brand" href="#page-top">eAnalytics</a>
@@ -163,4 +163,20 @@
             </div>
         </div>
     </body>
+        <footer class="footer py-4">
+            <div class="container">
+                <div class="row align-items-center">
+                    <div class="col-lg-4 text-lg-start">Copyright &copy; Your Website 2022</div>
+                    <div class="col-lg-4 my-3 my-lg-0">
+                        <a class="btn btn-dark btn-social mx-2" href="https://twitter.com" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+                        <a class="btn btn-dark btn-social mx-2" href="https://www.facebook.com" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+                        <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/yassine-elazami/" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+                    </div>
+                    <div class="col-lg-4 text-lg-end">
+                        <a class="link-dark text-decoration-none me-3" href="#!">Privacy Policy</a>
+                        <a class="link-dark text-decoration-none" href="#!">Terms of Use</a>
+                    </div>
+                </div>
+            </div>
+        </footer>
     </html>
